# PSP-HA-GPS-Logger-Firmware

./: .gitmodules  CMakeLists.txt  README.md  copy_uf2_to_pico.cmake
src/: CMakeLists.txt  main.c
